# wordle_solver

./: 5_characters_dictionary.txt  5_characters_dictionary_entropy.txt  5_characters_dictionary_large.txt  README.md  create_dictionary.py  interactive.py  pyproject.toml  search_words.py  solver.py
